manifests/infrastructure/envoy/outpost-catch-all.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-outpost-catch-all
  namespace: networking
spec:
  parentRefs:
    - name: edge
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: ext-auth-outpost
  namespace: authentik
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: networking
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: networking
  to:
    - group: ""
      kind: Service
      name: ak-outpost-authentik-embedded-outpost
